banner,choose place done

--- a/index.html
+++ b/index.html
@@ -47,5 +47,83 @@
             </div>
         </section>
     </header>
+    <main>
+        <!-- tour -->
+        <section id="tour">
+            <div class="container">
+                <div class="tour-main">
+                    <div class="tour-text">
+                        <h2 class="h22-tag">Our Popular Tours</h2>
+                        <p class="banner-p2">Set a budget that includes accommodation, transportation, meals, and activities.Look for family-friendly deals and discounts to maximize savings.</p>
+                        <p class="banner-p1"><i class="fa-solid fa-circle-dot"></i> Choose a destination that caters to the interests and preferences of all family members.</p>
+                        <p class="banner-p1"><i class="fa-solid fa-circle-dot"></i> Set a budget that includes accommodation, transportation, meals, and activities.
+                            Look for family-friendly deals and discounts to maximize savings.</p>
+                        <p class="banner-p1"><i class="fa-solid fa-circle-dot"></i> Select family-friendly accommodations with amenities such as spacious rooms, play areas, and possibly a kitchenette.</p>
+                        <p class="banner-p2">Plan convenient and comfortable transportation, considering the age and preferences of family members.
+                            If flying, book flights with suitable schedules, and if driving, plan rest stops.Include a mix of activities that appeal to both adults and children.</p>
+                            <button class="btn-primary">Read More</button>
+                    </div>
+                    <div class="tour-img">
+                        <img src="./Images/Rectangle 4.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- gallery start -->
+        <!-- <section id="gallery">
+            <div class="container">
+                <div class="gallery-head">
+                    <h2 class="h2-tag">Choose your destination</h2>
+                    <p class="banner-p2 center">Are you looking for a specific type of destination, like a beach, historical city, nature retreat, or something else? Choose our travel countries.</p>
+                </div>
+                    <div class="gallery-main">
+                        <div class="gallery-item">
+                            <img src="./Images/Rectangle 5.png" alt="">
+                            <img src="./Images/Rectangle 8.png" alt="">
+                        </div>
+                        <div class="gallery-item2">
+                            <img class="img3" src="./Images/Rectangle 6.png" alt="">
+                            <img class="img4" src="./Images/Rectangle 7.png" alt="">
+                            <img class="img5" src="./Images/Rectangle 9.png" alt="">
+                        </div>
+                        <div class="galllery-item3">
+                            <img src="./Images/Rectangle 11.png" alt="">
+                            <img src="./Images/Rectangle 10.png" alt="">
+                        </div>
+                    </div>
+              
+                
+            </div>
+        </section> -->
+        <!-- gallery end -->
+        <!-- choose -->
+        <section id="choose">
+            <div class="container">
+                <div class="gallery-head">
+                    <h2 class="h2-tag">Why Choose us</h2>
+                    <p class="banner-p2 center">We are giving you safe and beautiful moment. We take care our customers.</p>
+                </div>
+                <div class="choose-main">
+                    <div class="choose-item gray">
+                       <img src="./Images/pngegg.png" alt="">
+                        <h3>Handpicked Hotel</h3>
+                        <p class="banner-p2">Six Senses Laamu: Situated on a private island, Six Senses Laamu offers a combination of luxury and sustainability, with overwater and beachfront villas.</p>
+                    </div>
+                    <div class="choose-item water">
+                        <img src="./Images/pngegg (1).png" alt="">
+                        <h3>World class service</h3>
+                        <p class="banner-p2"> Our commitment to excellence ensures every moment is crafted with meticulous attention, offering you a seamless fusion of luxury and personalized care.</p>
+                    </div>
+                </div>
+                <div class="choose-main1">
+                    <div class="choose-item1" style="background-color: ;">
+                        <img src="./Images/pngegg (2).png" alt="">
+                        <h3>Best price gurantee</h3>
+                        <p class="banner-p2">Our commitment to you includes a Best Price Guarantee, ensuring that you receive the most competitive rates available. Trust us to provide unparalleled value without compromising on quality. Book with confidence, knowing you've secured the best deal for your exceptional experience.</p>
+                    </div>
+            </div>
+        </section>
+        <!-- choose end-->
+    </main>
 </body>
 </html>
