--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="choose-main1">
-                    <div class="choose-item1" style="background-color: ;">
+                    <div class="choose-item1" style="background: rgba(41, 206, 246, 0.05);">
                         <img src="./Images/pngegg (2).png" alt="">
                         <h3>Best price gurantee</h3>
                         <p class="banner-p2">Our commitment to you includes a Best Price Guarantee, ensuring that you receive the most competitive rates available. Trust us to provide unparalleled value without compromising on quality. Book with confidence, knowing you've secured the best deal for your exceptional experience.</p>
@@ -124,6 +124,25 @@
             </div>
         </section>
         <!-- choose end-->
+        <!-- perfect place -->
+        <section id="perfect">
+            <div class="container">
+                <div class="tour-main">
+                    <div class="tour-text">
+                        <h2 class="h22-tag">A simple perfect place</h2>
+                        <p class="banner-p2">Bangladesh's hill areas are known for their natural beauty, indigenous cultures, and trekking opportunities, making it a unique experience for nature enthusiasts.</p>
+                        <p class="banner-p1"><i class="fa-solid fa-circle-dot"></i> Kaptai Lake: While not a mountain, Kaptai Lake is a vast reservoir surrounded by hills and provides a peaceful and picturesque setting.</p>
+                        <p class="banner-p1"><i class="fa-solid fa-circle-dot"></i>Known for its stunning landscapes and surrounded by hills, Sajek Valley is a popular destination in the Chittagong Hill Tracts.</p>
+                        <div class="empty"></div>
+                            <button class="btn-primary">See More</button>
+                    </div>
+                    <div class="video">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/NgI8K93A_GA?si=JJCRKLqn6rUZCcCG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- perfect place end -->
     </main>
 </body>
 </html>
