--- a/index.html
+++ b/index.html
@@ -32,10 +32,23 @@
                         <h6>Where go</h6>
                     </div>
                     <div class="banner-item">
-                        <h6 >When <i class="fa-light fa-chevron-left fa-rotate-270"></i></h6>
+                        <from>
+                            <select name="When">
+                                <option>Morning</option>
+                                <option>Evening</option>
+                                <option>Night</option>
+                                </select>
+                        </from>
                     </div>
                     <div class="banner-item">
-                        <h6 >Select type <i class="fa-light fa-chevron-left fa-rotate-270"></i></h6>
+                        <!-- <h6 >Select type <i class="fa-light fa-chevron-left fa-rotate-270"></i></h6> -->
+                        <from>
+                            <select name="Select type">
+                                <option>Air</option>
+                                <option>Train</option>
+                                <option>Boat</option>
+                                </select>
+                        </from>
                     </div>
                     <div class="banner-item span">
                         <h6 class="span"> <i class="fa-solid fa-magnifying-glass"></i>  Find now </h6>
